--- a/MLM_Admin/MLM_Admin/src/app/categories/add-category/add-category.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/categories/add-category/add-category.component.html
@@ -1,1 +1,11 @@
-<p>add-category works!</p>
+<h2>Ajouter une nouvelle catégorie</h2>
+<form (ngSubmit)="addCategory(f)" #f="ngForm">
+    <div class="mb-3">
+        <label for="name" class="form-label">Name *</label>
+        <input type="text" class="form-control" id="name" name="name" ngModel required #name="ngModel" >
+        <span class="erreur" *ngIf="name.invalid && name.touched">Le champ Nom est obligatoire</span>
+    </div>
+    
+    <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Valider</button>
+    <div>* : Champ obligatoire</div>
+</form>
