--- a/MLM_Admin/MLM_Admin/src/app/categories/list-categories/list-categories.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/categories/list-categories/list-categories.component.html
@@ -1,1 +1,22 @@
-<p>list-categories works!</p>
+<h2>Liste des catégories :</h2>
+<br/>
+<button class="btn btn-success" routerLink="/categories/add">Ajouter une catégorie</button>
+<br/>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nom</th>
+            <th>Editer</th>
+            <th>Supprimer</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let c of categories">
+            <td>{{c.id}}</td>
+            <td>{{c.name}}</td>
+            <td><button class="btn btn-primary" [routerLink]="['/categories', 'edit', c.id]">Editer</button></td>
+            <td><button class="btn btn-danger" (click)="deleteCategory(c.id)">Supprimer</button></td>
+        </tr>
+    </tbody>
+</table>
