--- a/MLM_Admin/MLM_Admin/src/app/orders/list-orders/list-orders.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/orders/list-orders/list-orders.component.html
@@ -1,1 +1,26 @@
-<p>list-orders works!</p>
+<h2>Liste des commandes :</h2>
+<br/>
+<!-- <button class="btn btn-success" routerLink="/orders/add">Ajouter une catégorie</button> -->
+<br/>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>N° de commande</th>
+            <th>Date de commande</th>
+            <th>Statut de la commande</th>
+         <!--   <th>Editer</th> -->
+          <!--  <th>Supprimer</th> -->
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let o of orders">
+            <td>{{o.id}}</td>
+            <td>{{o.orderNumber}}</td>
+            <td>{{o.orderDate}}</td>
+            <td>{{o.orderStatus}}</td>
+            <!--<td><button class="btn btn-primary" [routerLink]="['/categories', 'edit', c.id]">Editer</button></td>-->
+            <!--<td><button class="btn btn-danger" (click)="deleteCategory(c.id)">Supprimer</button></td>-->
+        </tr>
+    </tbody>
+</table>
