--- a/MLM_Admin/MLM_Admin/src/app/orders/edit-order/edit-order.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/orders/edit-order/edit-order.component.html
@@ -1,1 +1,28 @@
-<p>edit-order works!</p>
+<h2>Editer une commande</h2>
+<form (ngSubmit)="editOrder(f)" #f="ngForm">
+    <div class="mb-3">
+        <label for="orderNumber" class="form-label">N° de commande *</label>
+        <input type="text" class="form-control" id="orderNumber" name="orderNumber" ngModel required #orderNumber="ngModel" [(ngModel)]="order==undefined?'':order.orderNumber" >
+        <span class="erreur" *ngIf="orderNumber.invalid && orderNumber.touched">Le champ N° de commande est obligatoire</span>
+    </div>
+
+    <div class="mb-3">
+        <label for="orderDate" class="form-label">Date de commande *</label>
+        <input type="date" class="form-control" id="orderDate" name="orderDate" required #orderDate="ngModel" [ngModel]="order!.orderDate | date : 'yyyy-MM-dd'" >
+        <span class="erreur" *ngIf="orderDate.invalid && orderDate.touched">Le champ Date de commande est obligatoire</span>
+    </div>
+
+    <div class="mb-3">
+        <label for="orderStatus" class="form-label">Statut de commande *</label>
+        <!-- <input type="text" class="form-control" id="orderStatus" name="orderStatus" ngModel required #orderStatus="ngModel" [(ngModel)]="order==undefined?'':order.orderStatus" > -->
+        <select id="orderStatus" name="orderStatus" ngModel required #orderStatus="ngModel" class="form-control" [(ngModel)]="order!.orderStatus">
+            <option value="">--Veuillez sélectionner un statut--</option>
+            <option *ngFor="let s of status" [value]="s">{{s}}</option>
+        </select>
+        <span class="erreur" *ngIf="orderNumber.invalid && orderNumber.touched">Le champ Statut de commande est obligatoire</span>
+    </div>
+    
+    <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Valider</button>
+    <div>* : Champ obligatoire</div>
+</form>
+
