--- a/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
@@ -1,11 +1,17 @@
 <h2>Liste des produits :</h2>
+
 <br/>
-<button class="btn btn-success" routerLink="/products/add">Ajouter un produit</button>
+<div class="bg-white rounded d-flex align-items-center justify-content-between" id="header">
+    <app-search-product (searchProductEvent)="filterProducts($event)"></app-search-product>
+    <button class="btn btn-success" routerLink="/products/add">Ajouter un produit</button>
+</div>
+
 <br/>
+
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Id</th>
+       
             <th>N° du Produit</th>
             <th>Nom du Produit</th>
             <th>Quantité</th>
@@ -20,14 +26,14 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let p of productsToDisplay">
-            <td>{{p.id}}</td>
+        <tr *ngFor="let p of filteredProducts ? filteredProducts : productsToDisplay">
+         
             <td>{{p.productNumber}}</td>
             <td>{{p.productName}}</td>
             <td>{{p.quantityInStock}}</td>
             <td>{{p.unitPrice}}</td>
             <td>{{p.category}}</td>
-            <td>{{p.image}}</td>
+            <td><img src={{p.image}} height = "40px" width="auto"></td>
             <td>{{p.color}}</td>
             <td>{{p.size}}</td>
             <td>{{p.description}}</td>
