--- a/MLM_Admin/MLM_Admin/src/app/app.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/app.component.html
@@ -16,7 +16,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-2 my-auto d-none d-sm-none d-md-block d-lg-block">
-                        <h5 class="brand-name">MLM</h5>
+                        <img src="../../assets/images/Logo_MLM.png" height="50px" width="auto">
                     </div>
                     <div class="col-md-5 my-auto">
 
@@ -24,13 +24,15 @@
                     <div class="col-md-5 my-auto">
                         <ul class="nav justify-content-end">
                             
-                            
-                            <li class="nav-item">
+                           
+                           <li class="nav-item"> 
                                 <a class="nav-link" routerLink="/login" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa fa-user"></i> Connexion 
+                                    <i class="fa fa-user"></i> Mon Compte 
                                 </a>
                                 
                             </li>
+                       
+                    
                         </ul>
                     </div>
                 </div>
@@ -66,7 +68,9 @@
                 </div>
             </div>
         </nav>
-        <router-outlet></router-outlet>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
