--- a/MLM_Admin/MLM_Admin/src/app/users/list-users/list-users.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/users/list-users/list-users.component.html
@@ -8,7 +8,7 @@
 <div class="ml-auto mt-3 mr-2">
     <nav aria-label="Page navigation example">
         <ul class="pagination">
-            <li class="page-item" [ngClass]="{ 'disabled': currentPage === 1 }">
+            <li class="page-item" [ngClass]="{ 'disabled': currentPage===1 }">
                 <a class="page-link" (click)="onPageChange(currentPage - 1)"  aria-label="Previous">
                     <span  aria-hidden="true" class="font-weight-bold" >&lt;</span>
                 </a>
@@ -17,7 +17,7 @@
                 <a class="page-link">{{currentPage}}</a>
             </li>
         
-            <li class="page-item" >
+            <li class="page-item" [ngClass]="{ 'disabled': currentPage>=(users.length)/itemsPerPage + itemsPerPage}">
                 <a class="page-link"  (click)="onPageChange(currentPage + 1)" aria-label="Next">
                     <span aria-hidden="true" class="font-weight-bold">&gt;</span> 
                 </a>
