--- a/MLM_Admin/MLM_Admin/src/app/app.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/app.component.html
@@ -32,6 +32,12 @@
                                 
                             </li>
                        
+                            <li class="nav-item"> 
+                                <a class="nav-link" routerLink="/profile" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-user"></i> Mon Profil 
+                                </a>
+                                
+                            </li>
                     
                         </ul>
                     </div>
