--- a/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
@@ -9,6 +9,7 @@
 <br/>
 
 
+
 <div class="ml-auto mt-3 mr-2">
     <nav aria-label="Page navigation example">
         <ul class="pagination">
@@ -20,8 +21,9 @@
             <li class="page-item active">
                 <a class="page-link">{{currentPage}}</a>
             </li>
-        
-            <li class="page-item" [ngClass]="{ 'disabled': currentPage>=(products.length)/itemsPerPage + itemsPerPage }">
+            Math.ceil((this.products.length)/this.itemsPerPage)
+            <li class="page-item" [ngClass]="{'disabled': currentPage>lengthProducts/itemsPerPage }">
+
                 <a class="page-link"  (click)="onPageChange(currentPage + 1)" aria-label="Next">
                     <span aria-hidden="true" class="font-weight-bold">&gt;</span> 
                 </a>
