ajout dernières retouches

--- a/MLM_Admin/MLM_Admin/src/app/categories/edit-category/edit-category.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/categories/edit-category/edit-category.component.html
@@ -1,4 +1,4 @@
-<h2>Editer Une catégorie</h2>
+<h2  class="text-center mt-5">Editer Une catégorie</h2>
 <form (ngSubmit)="editCategory(f)" #f="ngForm">
     <div class="mb-3">
         <label for="name" class="form-label">Nom de la catégorie *</label>
