--- a/MLM_Admin/MLM_Admin/src/app/categories/list-categories/list-categories.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/categories/list-categories/list-categories.component.html
@@ -1,4 +1,4 @@
-<h2>Liste des catégories :</h2>
+<h2  class="text-center mt-5">Liste des catégories :</h2>
 <br/>
 <button class="btn btn-success" routerLink="/categories/add">Ajouter une catégorie</button>
 <br/>
