--- a/MLM_Admin/MLM_Admin/src/app/orders/details-order/details-order.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/orders/details-order/details-order.component.html
@@ -1,4 +1,4 @@
-<h2>Détail de la commande :</h2>
+<h2  class="text-center mt-5">Détail de la commande :</h2>
 
 <table class="table table-striped">
     <thead>
