--- a/MLM_Admin/MLM_Admin/src/app/products/edit-product/edit-product.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/products/edit-product/edit-product.component.html
@@ -1,4 +1,4 @@
-<h2>Editer un produit</h2>
+<h2 class="text-center mt-5">Editer un produit</h2>
 <form (ngSubmit)="editProduct(f)" #f="ngForm">
     <div class="mb-3">
         <label for="productNumber" class="form-label">N° du produit *</label>
