--- a/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/products/list-products/list-products.component.html
@@ -1,4 +1,4 @@
-<h2>Liste des produits :</h2>
+<h2 class="text-center mt-5">Liste des produits :</h2>
 
 <br/>
 <div class="bg-white rounded d-flex align-items-center justify-content-between" id="header">
