--- a/MLM_Admin/MLM_Admin/src/app/users/edit-user/edit-user.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/users/edit-user/edit-user.component.html
@@ -1,4 +1,4 @@
-<h2>Editer un utilisateur</h2>
+<h2 class="text-center mt-5">Editer un utilisateur</h2>
 <form (ngSubmit)="editUser(f)" #f="ngForm">
 
     <div class="mb-3">
