--- a/MLM_Admin/MLM_Admin/src/app/users/list-users/list-users.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/users/list-users/list-users.component.html
@@ -1,4 +1,4 @@
-<h2>Liste des utilisateurs :</h2>
+<h2 class="text-center mt-5">Liste des utilisateurs :</h2>
 
 <div class="bg-white rounded d-flex align-items-center justify-content-between" id="header">
     <app-search-user (searchUserEvent)="filterUsers($event)"></app-search-user>
