--- a/MLM_Admin/MLM_Admin/src/app/app.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/app.component.html
@@ -24,20 +24,21 @@
                     <div class="col-md-5 my-auto">
                         <ul class="nav justify-content-end">
                             
-                           
-                           <li class="nav-item"> 
-                                <a class="nav-link" routerLink="/login" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa fa-user"></i> Mon Compte 
-                                </a>
-                                
-                            </li>
-                       
                             <li class="nav-item"> 
                                 <a class="nav-link" routerLink="/profile" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fa fa-user"></i> Mon Profil 
                                 </a>
                                 
                             </li>
+
+                           <li class="nav-item"> 
+                                <a class="nav-link" routerLink="/login" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-power-off"></i> Me déconnecter 
+                                </a>
+                                
+                            </li>
+                       
+                           
                     
                         </ul>
                     </div>
