--- a/MLM_Admin/MLM_Admin/src/app/categories/add-category/add-category.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/categories/add-category/add-category.component.html
@@ -1,4 +1,4 @@
-<h2>Ajouter une nouvelle catégorie</h2>
+<h2 class="text-center mt-5">Ajouter une nouvelle catégorie</h2>
 <form (ngSubmit)="addCategory(f)" #f="ngForm">
     <div class="mb-3">
         <label for="name" class="form-label">Name *</label>
