--- a/MLM_Admin/MLM_Admin/src/app/orders/edit-order/edit-order.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/orders/edit-order/edit-order.component.html
@@ -1,4 +1,4 @@
-<h2>Editer une commande</h2>
+<h2  class="text-center mt-5">Editer une commande</h2>
 <form (ngSubmit)="editOrder(f)" #f="ngForm">
     <div class="mb-3">
         <label for="orderNumber" class="form-label">N° de commande *</label>
