--- a/MLM_Admin/MLM_Admin/src/app/orders/list-orders/list-orders.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/orders/list-orders/list-orders.component.html
@@ -1,4 +1,4 @@
-<h2>Liste des commandes :</h2>
+<h2  class="text-center mt-5">Liste des commandes :</h2>
 <br/>
 <div class="bg-white rounded d-flex align-items-center justify-content-between" id="header">
     <app-search-order (searchOrderEvent)="filterOrders($event)"></app-search-order>
