mise à jour logout

--- a/MLM_Admin/MLM_Admin/src/app/app.component.html
+++ b/MLM_Admin/MLM_Admin/src/app/app.component.html
@@ -32,7 +32,7 @@
                             </li>
 
                            <li class="nav-item"> 
-                                <a class="nav-link" routerLink="/login" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link" routerLink="/login" (click)="logout()" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fa fa-power-off"></i> Me déconnecter 
                                 </a>
                                 
